Enable Sentry logging for production websocket server

--- a/conf/websocket.ini
+++ b/conf/websocket.ini
@@ -26,20 +26,32 @@ worker_class: h.websocket.Worker
 graceful_timeout: 0
 
 [loggers]
-keys = root
+keys = root, sentry
 
 [handlers]
-keys = console
+keys = console, sentry
 
 [formatters]
 keys = generic
 
 [logger_root]
+handlers = console, sentry
+
+[logger_sentry]
+level = WARN
 handlers = console
+qualname = sentry.errors
+propagate = 0
 
 [handler_console]
 class = StreamHandler
 args = ()
+formatter = generic
+
+[handler_sentry]
+class = raven.handlers.logging.SentryHandler
+args = ()
+level = WARN
 formatter = generic
 
 [formatter_generic]
