Warn if Promise is used as a global
We support IE10/11, neither of which define Promise globals, so make
jshint warn if we use Promise without explicitly defining it (by
importing a polyfill).

--- a/.jshintrc
+++ b/.jshintrc
@@ -26,6 +26,7 @@
   "phantom": true,
   "jquery": true,
   "predef": [
+    "-Promise", // We currently support IE10-11 which lack a Promise global
     "angular",
     "assert",
     "after",
@@ -37,7 +38,6 @@
     "it",
     "require",
     "sinon",
-    "Promise",
     "URL"
   ]
 }
